--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -16,6 +16,7 @@
     --secondary-bg-color: #fafafa;
     --light-bg-color: #EEF6FF;
     --selected-bg-color: #ffeeee;
+    --green-bg-color: #eeffef;
     --dark-bg-color: #d3d3d3;
 
     --overlay-bg-color: #0000006b;
