--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -16,7 +16,7 @@
     --secondary-bg-color: #fafafa;
     --light-bg-color: #EEF6FF;
     --selected-bg-color: #ffeeee;
-    --green-bg-color: #eeffef;
+    --green-bg-color: #d1f9d1;
     --dark-bg-color: #d3d3d3;
 
     --overlay-bg-color: #0000006b;
@@ -35,6 +35,7 @@
     --fontSize: 20px;
     --fontSizeLarge: 32px;
     --fontSizeSmall: 16px;
+    --fontSizeSmaller: 12px;
     --mainPageMargin: 10px;
 
     --modal-z-index: 10000;
