--- a/src/programFeatures/MonthDaySelector/ui/MonthForm.module.scss
+++ b/src/programFeatures/MonthDaySelector/ui/MonthForm.module.scss
@@ -202,6 +202,7 @@
                 margin-right: 10px;
                 padding: 10px;
                 border-radius: 10px;
+                align-items: center;
 
                 .MoneyInfoBlockLabel{
                     font-weight: var(--fontWeightBold);
