--- a/src/programFeatures/WeekDaySelector/ui/WeekForm.module.scss
+++ b/src/programFeatures/WeekDaySelector/ui/WeekForm.module.scss
@@ -183,7 +183,22 @@
             width: 100%;
             height: 50px;
             font-size: var(--fontSize);
+            margin: 5px;
         }
+    }
+
+    .BlackButton{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--main-bg-color) !important;
+        border-color: var(--btn-active)  !important;
+        color: var(--white-text);
+        width: fit-content;
+        // width: 100%;
+        // height: 50px;/
+        font-size: var(--fontSize);
+        margin: 5px;
     }
 
     .Footer{
@@ -191,11 +206,24 @@
         padding: 0 var(--mainPageMargin) var(--mainPageMargin) var(--mainPageMargin);
 
         background-color: var(--main-bg-color);
-        height: 40px;
+        height: 60px;
         display: flex;
         flex-direction: row;
+
+        justify-content: space-around;
         // background-color: rgb(251, 240, 255);
         
+        .Icon{
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+        }
+        .SelectedIcon{
+            background-color: var(--light-bg-color);
+        }
     }
 
 }
