--- a/src/serviceEntities/Task/ui/TaskForm.module.scss
+++ b/src/serviceEntities/Task/ui/TaskForm.module.scss
@@ -298,7 +298,7 @@
 
     .Label {
       margin-right: 5px;
-      min-width: 80px;
+      min-width: 90px !important;
       line-height: 90%;
     }
     .Icon {
