--- a/src/programFeatures/BuyingsList/ui/BuyingsListForm.module.scss
+++ b/src/programFeatures/BuyingsList/ui/BuyingsListForm.module.scss
@@ -29,6 +29,7 @@
         align-items: stretch;
         overflow-y: auto;
         max-height: (100%);
+        margin-bottom: 60px;
 
         .BuyingsListItem{
             display: flex;
@@ -168,7 +169,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: var(--input-bg);
+    padding-left: 10px;
+    border-radius: 10px;
     margin-top: 5px;
+   
 
     .Label {
       margin-right: 5px;
