--- a/src/serviceEntities/Task/ui/TaskForm.module.scss
+++ b/src/serviceEntities/Task/ui/TaskForm.module.scss
@@ -42,6 +42,7 @@
     align-items: center;
   }
 
+  .DaySelector,
   .WeekSelector,
   .MonthSelector,
   .YearSelector {
@@ -163,6 +164,38 @@
           background-color: var(--light-bg-color);
         }
         .SelectorSelectedMonthDay {
+          background-color: var(--primary);
+        }
+      }
+    }
+    .DaySelectorDays {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      flex-grow: 1;
+      margin-top: 5px;
+
+      .SelectorDayBlock {
+        margin: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 40px;
+        width: 40px;
+
+        .SelectorDaysDay {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 50%;
+          height: 40px;
+          width: 40px;
+          background-color: var(--light-bg-color);
+        }
+        .SelectorSelectedDaysDay {
           background-color: var(--primary);
         }
       }
@@ -397,6 +430,10 @@
     }
     .SelectorItemActive {
       background-color: var(--btn-active);
+      color: var(--white-text);
+    }
+    .SelectorItemHoliday {
+      background-color: var(--primary);
       color: var(--white-text);
     }
   }
